--- a/_layouts/camera.html
+++ b/_layouts/camera.html
@@ -3,53 +3,58 @@ layout: default
 ---
 <div class="camera-page">
   <h1>{{ page.title }}</h1>
-  
+
   <div class="camera-details">
     <div class="camera-info">
       <h2>About</h2>
       {% assign camera = site.data.cameras | where: "id", page.camera_id | first %}
       <p>{{ camera.description }}</p>
-      
-      <h2>Specifications</h2>
-      <ul>
-        {% for spec in camera.specifications %}
-        <li><strong>{{ spec.name }}:</strong> {{ spec.value }}</li>
-        {% endfor %}
-      </ul>
+
+      {% if camera.usage_instructions %}
+      <h2>How to Use</h2>
+      <p>Basic instructions for using the {{ page.title }}:</p>
+      <ol>
+          {% for instruction in camera.usage_instructions %}
+          <li>{{ instruction }}</li>
+          {% endfor %}
+      </ol>
+      {% endif %}
+
+      {% if camera.images %}
+      <h2></h2>
+      <div class="camera-images">
+          {% for image in camera.images %}
+          <img src="{{ image.src }}" alt="{{ image.alt }}" width="300">
+          {% endfor %}
+      </div>
+      {% endif %}
+
+
     </div>
-    
+
     <div class="camera-resources">
+
+        <h2>Specifications</h2>
+      <ul>
+          {% for spec in camera.specifications %}
+          <li><strong>{{ spec.name }}:</strong> {{ spec.value }}</li>
+          {% endfor %}
+      </ul>
+
       {% if camera.manual_pdf %}
-      <h2>Resources</h2>
+      <h2>Manual for Nerds</h2>
       <a href="{{ camera.manual_pdf }}" class="download-button">Download PDF</a>
       {% endif %}
-      
+
       {% if camera.external_link %}
       <a href="{{ camera.external_link }}" class="download-button">{{ camera.external_link_text | default: "External Link" }}</a>
       {% endif %}
-      
-      {% if camera.images %}
-      <h2>Images</h2>
-      <div class="camera-images">
-        {% for image in camera.images %}
-        <img src="{{ image.src }}" alt="{{ image.alt }}" width="300">
-        {% endfor %}
-      </div>
-      {% endif %}
+
     </div>
   </div>
-  
+
   <div class="camera-usage">
-    {% if camera.usage_instructions %}
-    <h2>How to Use</h2>
-    <p>Basic instructions for using the {{ page.title }}:</p>
-    <ol>
-      {% for instruction in camera.usage_instructions %}
-      <li>{{ instruction }}</li>
-      {% endfor %}
-    </ol>
-    {% endif %}
-    
+
     {% if camera.features %}
     <h2>Features</h2>
     <p>The {{ page.title }} includes several useful features:</p>
@@ -59,7 +64,7 @@ layout: default
       {% endfor %}
     </ul>
     {% endif %}
-    
+
     {% if camera.voice_commands %}
     <h2>Voice Commands</h2>
     <p>The {{ page.title }} provides voice feedback for various situations:</p>
